--- a/src/app/pages/watch-list/watch-list.page.scss
+++ b/src/app/pages/watch-list/watch-list.page.scss
@@ -5,16 +5,16 @@
   --inner-padding-bottom: 10px;
   --padding-start: 0;
 
-    .title-1 {
-      font-weight: bold;
-      color: #202020;
-    }
-    .title-2 {
-      display: block;
-      font-weight: bold;
-      margin-top: 4px;
-      color: #585858;
-    }
+  .title-1 {
+    font-weight: bold;
+    color: #2d2d2d;
+  }
+  .title-2 {
+    display: block;
+    font-weight: bold;
+    margin-top: 4px;
+    color: #808080;
+  }
 
   .rank-wrap {
     color: #dc3545;
