graph page added

--- a/src/app/pages/watch-list/watch-list.page.html
+++ b/src/app/pages/watch-list/watch-list.page.html
@@ -6,7 +6,7 @@
 
 <ion-content>
   <ion-list>
-    <ion-item class="watch-list" *ngFor="let item of watchList">
+    <ion-item class="watch-list" *ngFor="let item of watchList" routerLink="/graph">
       <span>
         <span class="title-1">{{ item.title }}</span>
         <span class="title-2">{{ item.subTitle }}</span>
