--- a/src/app/pages/watch-list/watch-list.page.scss
+++ b/src/app/pages/watch-list/watch-list.page.scss
@@ -4,7 +4,7 @@
   --inner-padding-top: 10px;
   --inner-padding-bottom: 10px;
   --padding-start: 0;
-
+  outline: 0;
   .title-1 {
     font-weight: bold;
     color: #2d2d2d;
